OO-5012: selenium test which add an image in SP in course editor